<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#007733"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Top_home"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_home_24" />

        <TextView
            android:id="@+id/topTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/Top_search"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_search_24" />

    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical">
        <LinearLayout
            android:id="@+id/slideBar"
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sub2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub2_1">
            </Button>
            <Button
                android:id="@+id/sub2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub2_2">
            </Button>
            <Button
                android:id="@+id/sub2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub2_3">
            </Button>

            <Button
                android:id="@+id/sub2_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub2_4"></Button>

            <Button
                android:id="@+id/sub2_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub2_5">
            </Button>
            <Button
                android:id="@+id/sub2_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub2_6">
            </Button>

        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAFF"
        />


</LinearLayout>